[package]
name = "bgpkit-commons"
version = "0.8.2"
edition = "2024"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/bgpkit/bgpkit-commons"
documentation = "https://docs.rs/bgpkit-commons"
description = """
A library for common BGP-related data and functions.
"""
keywords = ["bgp", "bgpkit"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

as2org-rs = { version = "1.0.0", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
ipnet = { version = "2.9", features = ["serde"], optional = true }
ipnet-trie = { version = "0.2.0", optional = true }
oneio = { version = "0.18.2", optional = true }
peeringdb-rs = { version = "0.1.1", optional = true }
regex = { version = "1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"


[features]
default = ["all"]

# Module features
asinfo = ["as2org-rs", "peeringdb-rs", "oneio", "serde", "serde_json", "tracing", "chrono"]
as2rel = ["oneio", "serde", "serde_json", "tracing"]
bogons = ["oneio", "serde", "ipnet", "regex", "chrono"]
countries = ["oneio", "serde"]
mrt_collectors = ["oneio", "serde", "chrono"]
rpki = ["oneio", "serde", "ipnet", "ipnet-trie", "chrono", "tracing"]

# Convenience feature to enable all modules
all = ["asinfo", "as2rel", "bogons", "countries", "mrt_collectors", "rpki"]

[lints.clippy]
uninlined_format_args = "allow"
