[package]
name = "bgpkit-commons"
version = "0.9.6"
edition = "2024"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/bgpkit/bgpkit-commons"
documentation = "https://docs.rs/bgpkit-commons"
description = """
A library for common BGP-related data and functions.
"""
keywords = ["bgp", "bgpkit"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }

chrono = { version = "0.4", features = ["serde"], optional = true }
ipnet = { version = "2.9", features = ["serde"], optional = true }
ipnet-trie = { version = "0.3.0", optional = true }
oneio = { version = "0.20.0", optional = true, features = ["json"] }
regex = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"
serde_json = "1"
oneio = { version = "0.20.0", features = ["json"] }


[features]
default = ["all"]

# Module features
asinfo = ["oneio", "serde_json", "tracing", "chrono", "regex"]
as2rel = ["oneio", "serde_json", "tracing"]
bogons = ["oneio", "ipnet", "regex", "chrono"]
countries = ["oneio"]
mrt_collectors = ["oneio", "chrono"]
rpki = ["oneio", "ipnet", "ipnet-trie", "chrono", "tracing"]

# Convenience feature to enable all modules
all = ["asinfo", "as2rel", "bogons", "countries", "mrt_collectors", "rpki"]

# Example configurations - specify required features for each example
[[example]]
name = "as2org"
required-features = ["asinfo", "countries"]

[[example]]
name = "collectors"
required-features = ["mrt_collectors"]

[[example]]
name = "list_aspas"
required-features = ["rpki"]

[lints.clippy]
uninlined_format_args = "allow"
collapsible_if = "allow"
